--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,7 @@
     "semi": true,
     "trailingComma": "es5",
     "useTabs": false,
+    "tabWidth": 4,
     "quoteProps": "as-needed",
     "bracketSpacing": true,
     "arrowParens": "always",
